--- a/AnalysisCat.Helper/AnalysisCat.Helper.csproj
+++ b/AnalysisCat.Helper/AnalysisCat.Helper.csproj
@@ -44,10 +44,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="CatConfig\cat020-asterix-mlt-messages-part-14.xlsx" />
+    <Content Include="CatConfig\record.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="CatConfig\record.txt" />
+    <None Include="CatConfig\Cat020pt14ed19.xlsx" />
+    <None Include="CatConfig\Cat021pt12ed24.xlsx" />
+    <None Include="CatConfig\Cat062p9ed118.xlsx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
