--- a/AnalysisCat.Helper/AnalysisCat.Helper.csproj
+++ b/AnalysisCat.Helper/AnalysisCat.Helper.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="DataParser.cs" />
     <Compile Include="Models\CatConfigFileModel.cs" />
+    <Compile Include="Models\CatDataModel.cs" />
     <Compile Include="Models\CatType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DataProcessing.cs" />
