--- a/AnalysisCat.Helper/AnalysisCat.Helper.csproj
+++ b/AnalysisCat.Helper/AnalysisCat.Helper.csproj
@@ -51,14 +51,26 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard1.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.Abstractions, Version=5.11.6.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.5.11.9\lib\net45\Unity.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Unity.Container, Version=5.11.10.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.5.11.9\lib\net45\Unity.Container.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Asterix\Cat020.cs" />
+    <Compile Include="Asterix\Cat021.cs" />
+    <Compile Include="Asterix\Cat062.cs" />
     <Compile Include="DataParser.cs" />
     <Compile Include="Models\CatConfigFileModel.cs" />
     <Compile Include="Models\CatDataModel.cs" />
@@ -67,6 +79,7 @@
     <Compile Include="Utils\DataProcessing.cs" />
     <Compile Include="Utils\ExcelHelper.cs" />
     <Compile Include="Utils\GetCatConfigFile.cs" />
+    <Compile Include="Utils\ReflectHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="CatConfig\record.txt">
