--- a/AnalysisCat.Helper/packages.config
+++ b/AnalysisCat.Helper/packages.config
@@ -3,4 +3,6 @@
   <package id="NPOI" version="2.5.2" targetFramework="net452" />
   <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net452" />
   <package id="SharpZipLib" version="1.2.0" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
+  <package id="Unity" version="5.11.9" targetFramework="net452" />
 </packages>
