--- a/AnalysisCat.Helper/AnalysisCat.Helper.csproj
+++ b/AnalysisCat.Helper/AnalysisCat.Helper.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Models\CatConfigFileModel.cs" />
     <Compile Include="Models\CatDataModel.cs" />
     <Compile Include="Models\CatType.cs" />
+    <Compile Include="Models\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DataProcessing.cs" />
     <Compile Include="Utils\ExcelHelper.cs" />
