--- a/AnalysisCat.Helper/AnalysisCat.Helper.csproj
+++ b/AnalysisCat.Helper/AnalysisCat.Helper.csproj
@@ -72,10 +72,12 @@
     <Compile Include="Asterix\Cat021.cs" />
     <Compile Include="Asterix\Cat062.cs" />
     <Compile Include="DataParser.cs" />
+    <Compile Include="Models\AsterixState.cs" />
     <Compile Include="Models\CatConfigFileModel.cs" />
     <Compile Include="Models\CatDataModel.cs" />
     <Compile Include="Models\CatType.cs" />
     <Compile Include="Models\Constants.cs" />
+    <Compile Include="Models\ViewAsterixModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\DataProcessing.cs" />
     <Compile Include="Utils\ExcelHelper.cs" />
